--- a/example/public/index.html
+++ b/example/public/index.html
@@ -37,5 +37,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- Place this tag in your head or just before your close body tag. -->
   </body>
 </html>
