--- a/example/public/index.html
+++ b/example/public/index.html
@@ -38,5 +38,14 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <!-- Place this tag in your head or just before your close body tag. -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140316487-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-140316487-1');
+    </script>
   </body>
 </html>
